plugin id chnages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 
   lint:
     image: buildkite/plugin-linter
-    command: ['--id', 'lambdatest/lambdatest-plugin']
+    command: ['--id', 'lambdatest/lambdatest']
     volumes:
       - ".:/plugin:ro"
       
