--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,7 +6,7 @@ steps:
   - label: ":sparkles: lint"
     plugins:
       plugin-linter#v2.0.0:
-        id: lambdatest/lambdatest-plugin
+        id: lambdatest/lambdatest
   - label: ":shell: Shellcheck"
     plugins:
       shellcheck#v1.0.1:
