--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Lint for plugins
-              run: .ci/lint-plugin.sh
+              run: scripts/lint-plugin.sh
 
     lint-shell:
         runs-on: ubuntu-latest
@@ -23,7 +23,7 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Lint for shell
-              run: .ci/lint-shell.sh
+              run: scripts/lint-shell.sh
 
     test:
         runs-on: ubuntu-latest
@@ -32,5 +32,5 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Run test.sh
-              run: .ci/test.sh
+              run: scripts/test.sh
             
